--- a/style/style.css
+++ b/style/style.css
@@ -1504,15 +1504,14 @@ embed {
   /* padding-top: 10%; */
   /* text-align: center; */
   /* padding: 50px 10px; */
-  height: 70px;
+  height: 14vw;
   width: 100%;
-  margin: 0px 0px 0px 100px;
-  font-size: 40px;
-  padding-left: 5px;
+  font-size: 8vw;
   font-weight: bold;
   font-style: italic;
   -webkit-transition: 3s;
   transition: 3s;
+  text-align: center;
 }
 
 #content {
@@ -1532,7 +1531,7 @@ embed {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  margin: 70px 90px 0px 90px;
+  margin: 0 90px 0px 90px;
   padding: 0 5vw 0 5vw;
   -ms-flex-direction: column;
       flex-direction: column;
@@ -1542,8 +1541,8 @@ embed {
   top: 0;
   bottom: 0;
   position: fixed;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  position: relative;
+  overflow-y: hidden;
 }
 
 .feedback {
@@ -1692,6 +1691,13 @@ footer {
   }
   .sidenav a {
     font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 40em) {
+  #content {
+    margin: 0px;
+    padding: 0px;
   }
 }
 /*# sourceMappingURL=style.css.map */
