--- a/style/style.scss
+++ b/style/style.scss
@@ -1,7 +1,8 @@
 @import "hamburgers";
 $titleBgColour: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 1) 100%);
 $headerPadding: 90px;
-$titleSize: 40px;
+// $titleSize: 40px;
+$titleSize: 8vw;
 $headerHeight: 68px;
 $varWidth: 14vw;
 
@@ -220,6 +221,7 @@ html {
 embed{width: 100%; height: 700px;}
 
 #title {
+    // position: fixed;
     z-index: 1;
     /* color: rgba(255, 255, 255, 0.5); */
     /* padding-top: 10%; */
@@ -229,16 +231,23 @@ embed{width: 100%; height: 700px;}
     height: $titleSize*1.75;
     width: 100%;
     // color: black;
-    margin: 0px 0px 0px $headerPadding+10px;
+    // margin: 0px 0px 0px $headerPadding;
     // background: $bgColour;
     font-size: $titleSize;
-    padding-left: 5px;
+    // padding-left: 5px;
     font-weight: bold;
     font-style: italic;
     transition: 3s;
+    text-align: center
 }
 
 #content {
+    // height: 200px;
+    // width:150px;
+    // overflow: auto;
+    // position: relative;
+    // overflow-y: hidden;
+    
     -webkit-animation: fadein 2s;
     -moz-animation: fadein 2s;
     -ms-animation: fadein 2s;
@@ -253,7 +262,9 @@ embed{width: 100%; height: 700px;}
     display: flex;
     justify-content: flex-start;
     flex-direction: row;
-    margin: $titleSize*1.75 $headerPadding 0px $headerPadding;
+    // margin: $titleSize*1.75 $headerPadding 0px $headerPadding;
+    margin: 0 $headerPadding 0px $headerPadding;
+
     padding: 0 5vw 0 5vw;
     // margin-top: $titleSize;
     // height:50%;
@@ -264,8 +275,12 @@ embed{width: 100%; height: 700px;}
     top: 0;
     bottom: 0;
     position: fixed;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    // overflow: auto;
+    // overflow-y: hidden;
+    // overflow: auto;
+    position: relative;
+    overflow-y: hidden;
+
 }
 
 .feedback {
@@ -434,4 +449,15 @@ footer {
     .sidenav a {
         font-size: 18px;
     }
+    
+}
+
+// Fit content to smaller screens
+@media only screen and (max-width: 40em) { 
+
+    #content {
+	  margin:0px;	
+      padding:0px;
+    }
+				
 }
