--- a/style/style.scss
+++ b/style/style.scss
@@ -323,9 +323,12 @@ embed {
 }
 
 .feedback {
+    // display: flex;
+    // justify-content: center;
+
     padding: 1px 20px 20px;
     background: rgba(0, 0, 0, 0.5);
-    margin: 10px 0px 10px;
+    margin: 0px;
     color: white;
 }
 
@@ -447,6 +450,7 @@ footer {
     overflow-x: hidden;
     padding-top: 60px;
     transition: 0.5s;
+    box-shadow: 0px 15px 50px black;
 }
 
 /* The navigation menu links */
